--- a/WebContent/autor.xhtml
+++ b/WebContent/autor.xhtml
@@ -56,7 +56,14 @@
 					</p:commandButton>
 					
 					<p:commandButton icon="fa fa-fw fa-remove" action="#{autorBean.remover(autor)}" 
-						update="@form" />
+						update="@form">
+						 <p:confirm header="Confirmation" message="Tem certeza que 
+						 deseja remover?" icon="ui-icon-alert" />
+			 </p:commandButton>
+		<p:confirmDialog  global="true" showEffect="fade" hideEffect="fade">
+        <p:commandButton value="Yes" type="button" styleClass="ui-confirmdialog-yes" icon="ui-icon-check" />
+        <p:commandButton value="No" type="button" styleClass="ui-confirmdialog-no" icon="ui-icon-close" />
+    </p:confirmDialog>
 						
 					#{autor.nome} - #{autor.email}
 				</p:dataList>
