--- a/WebContent/autor.xhtml
+++ b/WebContent/autor.xhtml
@@ -14,7 +14,7 @@
 		</f:metadata>
 
 		<ui:define name="titulo">
-				<p:outputPanel>Novo Autor</p:outputPanel>
+				<p:outputPanel>Cadastro de Autor</p:outputPanel>
 		</ui:define>
 
 		<ui:define name="conteudo">
