--- a/WebContent/login.xhtml
+++ b/WebContent/login.xhtml
@@ -6,36 +6,79 @@
 	xmlns:p="http://primefaces.org/ui"
 	xmlns:ui="http://xmlns.jcp.org/jsf/facelets">
 
-	<ui:composition template="_template.xhtml">
+<ui:composition template="_template.xhtml">
 
-		<ui:define name="titulo">
-			<p:outputPanel>Login</p:outputPanel>
-		</ui:define>
+	<ui:define name="titulo">
+		<p:outputPanel>Login</p:outputPanel>
+	</ui:define>
 
-		<ui:define name="conteudo">
+	<ui:define name="conteudo">
+
+		<p:messages globalOnly="true">
+
+		</p:messages>
+
+		<h:form id="login">
+			<p:fieldset legend="Login">
+				<h:panelGrid columns="3">
+
+					<p:outputLabel value="Email:" for="email" />
+					<p:inputText id="email" value="#{loginBean.usuario.email}"
+						required="true">
+						<f:passThroughAttribute name="type" value="email" />
+					</p:inputText>
+					<p:message for="email" id="messageEmail" />
+
+					<p:outputLabel value="Senha:" for="senha" />
+					<p:password id="senha" value="#{loginBean.usuario.senha}"
+						feedback="true" required="true" />
+					<p:message for="senha" id="messageSenha" />
+
+					<p:commandButton id="EfLogin" value="Efetue Login"
+						onclick="start()" widgetVar="startButton1"
+						action="#{loginBean.efetuaLogin}" update=":brg @form" process="@form :brg" />
+
+
+
+				</h:panelGrid>
+
+
+			</p:fieldset>
+			<script type="text/javascript">
+function start() {
+    PF('startButton1').disable();
+ 
+    window['progress'] = setInterval(function() {
+        var pbClient = PF('pbClient'),
+        oldValue = pbClient.getValue(),
+        newValue = oldValue + 20;
+ 
+        pbClient.setValue(pbClient.getValue() + 20);
+ 
+        if(newValue === 100) {
+            clearInterval(window['progress']);
+        }
+ 
+ 
+    }, 1000);
+}
+ 
+function cancel() {
+    clearInterval(window['progress']);
+    PF('pbClient').setValue(0);
+    PF('startButton1').enable();
+}
+</script>
+
 		
-			<p:messages globalOnly="true" />
-		
-			<h:form id="login">
-				<p:fieldset legend="Login">
-					<h:panelGrid columns="3">
+		</h:form>
+		<h:form id="brg">
+					<p:progressBar ajax="true" id="progressBarClient" widgetVar="pbClient"
+				style="width:300px" />
+		</h:form>
+			
+	</ui:define>
 
-						<p:outputLabel value="Email:" for="email" />
-						<p:inputText id="email" value="#{loginBean.usuario.email}" required="true">
-							<f:passThroughAttribute name="type" value="email" />
-						</p:inputText>
-						<p:message for="email" id="messageEmail" />
-						
-						<p:outputLabel value="Senha:" for="senha" />
-						<p:password id="senha" value="#{loginBean.usuario.senha}" feedback="true" required="true" />
-						<p:message for="senha" id="messageSenha" />
-
-						<p:commandButton value="Efetue Login" action="#{loginBean.efetuaLogin}" update="@form" process="@form" />
-					</h:panelGrid>
-				</p:fieldset>
-			</h:form>
-		</ui:define>
-
-	</ui:composition>
+</ui:composition>
 
 </html>
