--- a/WebContent/login.xhtml
+++ b/WebContent/login.xhtml
@@ -35,7 +35,7 @@
 					<p:message for="senha" id="messageSenha" />
 
 					<p:commandButton id="EfLogin" value="Efetue Login"
-						onclick="start()" widgetVar="startButton1"
+						onclick="start(), PF('dlg2').show();" widgetVar="startButton1"
 						action="#{loginBean.efetuaLogin}" update=":brg @form" process="@form :brg" />
 
 
@@ -73,8 +73,12 @@ function cancel() {
 		
 		</h:form>
 		<h:form id="brg">
+		<p:dialog header="Bem Vindo" closable="false" closeOnEscape="false" resizable="false" widgetVar="dlg2" modal="true" height="50" width="500">
+    <h:outputText value="Carregando ..." />
+
 					<p:progressBar ajax="true" id="progressBarClient" widgetVar="pbClient"
-				style="width:300px" />
+				style="width:450px" />
+				</p:dialog>  
 		</h:form>
 			
 	</ui:define>
