--- a/WebContent/livro.xhtml
+++ b/WebContent/livro.xhtml
@@ -62,7 +62,7 @@
 
 			</p:fieldset>
 
-			<p:fieldset legend="Dados do Autor">
+			<p:fieldset  legend="Dados do Autor">
 
 				<p:panelGrid columns="4">
 					<p:outputLabel value="Selecione Autor:" for="autor" />
@@ -85,14 +85,15 @@
 					<p:column>
 						<h:outputText value="#{autor.nome}" />
 					</p:column>
-					<p:column>
-						<p:commandButton icon="fa fa-fw fa-remove"
+					<p:column width="200">
+						<p:commandButton value="Remover" icon="fa fa-fw fa-remove"
 							action="#{livroBean.removerAutorDoLivro(autor)}"
 							update="tabelaAutores" process="@this" />
 					</p:column>
 				</p:dataTable>
 
 			</p:fieldset>
+			<p:separator/>
 			<p:commandButton value="Gravar" action="#{livroBean.gravar}"
 				process="@this @form" update="@form :formTabelaLivros:tabelaLivros">
 
